SERVER-38329 Remove unused member TextOrStage::_index.